tests/error/type_errors/call_not_function.err
Error: Not callable (at $FILE:6:11)
  | 
4 | @compile_guppy
5 | def foo(x: int) -> int:
6 |     return x(42)
  |            ^ Expected a function, got expression of type `int`

Guppy compilation failed due to 1 previous error
